# gol-case-entrevista

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
case_gol/: __init__.py  auth.py  config.py  database.py  schema.sql  stats.py
case_gol/services/: stats.py
case_gol/templates/: base.html
case_gol/templates/auth/: login.html  register.html
case_gol/templates/stats/: index.html  results.html
case_gol/utils/: populate_db.py
