[project]
name = "case_gol"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus Vieira"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "flask-sqlalchemy (>=3.1.1,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
